--- a/components/b-page/b-page.scss
+++ b/components/b-page/b-page.scss
@@ -50,7 +50,143 @@ a img {
   border: none;
 }
 
+$components-path: "../../../components";
+
 /* ------------------Font---------------------- */
+/* Open Sans @font-face kit */
+
+$open-sans-path: "#{$components-path}/b-page/fonts";
+
+/* BEGIN Light */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/Light/OpenSans-Light.eot');
+  src: url('#{$open-sans-path}/Light/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/Light/OpenSans-Light.woff') format('woff'),
+  url('#{$open-sans-path}/Light/OpenSans-Light.ttf') format('truetype'),
+  url('#{$open-sans-path}/Light/OpenSans-Light.svg#OpenSansLight') format('svg');
+  font-weight: 300;
+  font-style: normal;
+}
+/* END Light */
+
+/* BEGIN Light Italic */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/LightItalic/OpenSans-LightItalic.eot');
+  src: url('#{$open-sans-path}/LightItalic/OpenSans-LightItalic.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/LightItalic/OpenSans-LightItalic.woff') format('woff'),
+  url('#{$open-sans-path}/LightItalic/OpenSans-LightItalic.ttf') format('truetype'),
+  url('#{$open-sans-path}/LightItalic/OpenSans-LightItalic.svg#OpenSansLightItalic') format('svg');
+  font-weight: 300;
+  font-style: italic;
+}
+/* END Light Italic */
+
+/* BEGIN Regular */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/Regular/OpenSans-Regular.eot');
+  src: url('#{$open-sans-path}/Regular/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/Regular/OpenSans-Regular.woff') format('woff'),
+  url('#{$open-sans-path}/Regular/OpenSans-Regular.ttf') format('truetype'),
+  url('#{$open-sans-path}/Regular/OpenSans-Regular.svg#OpenSansRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* END Regular */
+
+/* BEGIN Italic */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/Italic/OpenSans-Italic.eot');
+  src: url('#{$open-sans-path}/Italic/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/Italic/OpenSans-Italic.woff') format('woff'),
+  url('#{$open-sans-path}/Italic/OpenSans-Italic.ttf') format('truetype'),
+  url('#{$open-sans-path}/Italic/OpenSans-Italic.svg#OpenSansItalic') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
+/* END Italic */
+
+/* BEGIN Semibold */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/Semibold/OpenSans-Semibold.eot');
+  src: url('#{$open-sans-path}/Semibold/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/Semibold/OpenSans-Semibold.woff') format('woff'),
+  url('#{$open-sans-path}/Semibold/OpenSans-Semibold.ttf') format('truetype'),
+  url('#{$open-sans-path}/Semibold/OpenSans-Semibold.svg#OpenSansSemibold') format('svg');
+  font-weight: 600;
+  font-style: normal;
+}
+/* END Semibold */
+
+/* BEGIN Semibold Italic */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/SemiboldItalic/OpenSans-SemiboldItalic.eot');
+  src: url('#{$open-sans-path}/SemiboldItalic/OpenSans-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/SemiboldItalic/OpenSans-SemiboldItalic.woff') format('woff'),
+  url('#{$open-sans-path}/SemiboldItalic/OpenSans-SemiboldItalic.ttf') format('truetype'),
+  url('#{$open-sans-path}/SemiboldItalic/OpenSans-SemiboldItalic.svg#OpenSansSemiboldItalic') format('svg');
+  font-weight: 600;
+  font-style: italic;
+}
+/* END Semibold Italic */
+
+/* BEGIN Bold */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/Bold/OpenSans-Bold.eot');
+  src: url('#{$open-sans-path}/Bold/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/Bold/OpenSans-Bold.woff') format('woff'),
+  url('#{$open-sans-path}/Bold/OpenSans-Bold.ttf') format('truetype'),
+  url('#{$open-sans-path}/Bold/OpenSans-Bold.svg#OpenSansBold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+/* END Bold */
+
+/* BEGIN Bold Italic */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/BoldItalic/OpenSans-BoldItalic.eot');
+  src: url('#{$open-sans-path}/BoldItalic/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/BoldItalic/OpenSans-BoldItalic.woff') format('woff'),
+  url('#{$open-sans-path}/BoldItalic/OpenSans-BoldItalic.ttf') format('truetype'),
+  url('#{$open-sans-path}/BoldItalic/OpenSans-BoldItalic.svg#OpenSansBoldItalic') format('svg');
+  font-weight: bold;
+  font-style: italic;
+}
+/* END Bold Italic */
+
+/* BEGIN Extrabold */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/ExtraBold/OpenSans-ExtraBold.eot');
+  src: url('#{$open-sans-path}/ExtraBold/OpenSans-ExtraBold.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/ExtraBold/OpenSans-ExtraBold.woff') format('woff'),
+  url('#{$open-sans-path}/ExtraBold/OpenSans-ExtraBold.ttf') format('truetype'),
+  url('#{$open-sans-path}/ExtraBold/OpenSans-ExtraBold.svg#OpenSansExtrabold') format('svg');
+  font-weight: 800;
+  font-style: normal;
+}
+/* END Extrabold */
+
+/* BEGIN Extrabold Italic */
+@font-face {
+  font-family: 'Open Sans';
+  src: url('#{$open-sans-path}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.eot');
+  src: url('#{$open-sans-path}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
+  url('#{$open-sans-path}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.woff') format('woff'),
+  url('#{$open-sans-path}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.ttf') format('truetype'),
+  url('#{$open-sans-path}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.svg#OpenSansExtraboldItalic') format('svg');
+  font-weight: 800;
+  font-style: italic;
+}
+/* END Extrabold Italic */
+
 /* -------------------------------------------- */
 
 /* ------------------Style---------------------- */
@@ -59,25 +195,25 @@ a img {
 /* ------------------Layout---------------------- */
 /* -------------------------------------------- */
 
-/* Stick footer */
-html,
+$b-page-images-path: "#{$components-path}/b-page/images";
+$b-header-images-path: "#{$components-path}/b-header/images";
+$b-content-images-path: "#{$components-path}/b-content/images";
+
+html {
+  height: 100%;
+}
 body {
-  height: 100%;
+  @extend html;
+//  background: url(../../../components/b-page/images/bg/1.jpg) no-repeat scroll;
 }
-.b-page {
-  width: 100%;
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin: 0 auto -77px;
-}
-.b-footer-content,
 .push {
-  height: 77px;
   clear: both;
 }
 .b-page {
-  background: url(../../../components/b-page/images/bg/1.jpg) no-repeat scroll;
+  background: url('#{$b-page-images-path}/tile.png') scroll;
+  position: fixed;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   min-height: 100%;
