add box-shadow to header, footer, content, sidebar modify box-shadow mixin: pass variable arguments

--- a/components/b-header/b-header.scss
+++ b/components/b-header/b-header.scss
@@ -7,6 +7,7 @@ $b-header-images-path: "#{$components-path}/b-header/images";
   @extend %clearfix;
   width: 100%;
   @include rgba-background(#000, 0.33);
+  @include box-shadow(0 1px 0 rgba(0,0,0,0.55), inset 0 -1px 0 rgba(255,255,255,0.09));
   margin-bottom: 40px;
   .b-header {
     width: 1010px;
