--- a/components/mixin.lib.scss
+++ b/components/mixin.lib.scss
@@ -2,7 +2,7 @@
   background-color: $hexcolor;
   background-color: rgba($hexcolor, $opacity);
 }
-@mixin box-shadow($value) {
+@mixin box-shadow($value...) {
   -webkit-box-shadow: $value;
   -moz-box-shadow: $value;
   box-shadow: $value;
