--- a/layouts/main.jade
+++ b/layouts/main.jade
@@ -64,7 +64,7 @@ html
                     li: a(href='#', class='b-social__flickr')
                     li: a(href='#', class='b-social__linkedin')
 
-                div.b-content
+                div.b-content.b-content_box_current
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     | tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -77,7 +77,7 @@ html
                     | consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     | cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                     | proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                div.b-sidebar
+                div.b-sidebar.b-content_box_current
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     | tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
