--- a/components/b-content/b-content.scss
+++ b/components/b-content/b-content.scss
@@ -126,18 +126,19 @@ $b-content-images-path: "#{$components-path}/b-content/images";
   .b-content {
     float: left;
     width: 670px;
-    height: 200px;
+  }
+  .b-content_box_current {
     padding: 20px;
+//    padding-bottom: 0;
+    position: relative;
+    overflow: hidden;
     @include sass-box-sizing($type: "border");
     @include rgba-background(#000, 0.44);
+    @include box-shadow(0px 0px 0px 1px rgba(0, 0, 0, 0.44));
   }
   .b-sidebar {
     float: right;
     width: 310px;
-    height: 400px;
-    padding: 20px;
-    @include sass-box-sizing($type: "border");
-    @include rgba-background(#000, 0.44);
   }
 }
 
