--- a/components/b-footer/b-footer.scss
+++ b/components/b-footer/b-footer.scss
@@ -1,6 +1,7 @@
 @import "mixin.lib";
 .b-footer-wrap {
   @include rgba-background(#000, 0.44);
+  @include box-shadow(0 -1px 0 rgba(0,0,0,0.55), inset 0 1px 0 rgba(255,255,255,0.09));
   margin-top: 60px;
   .b-footer {
     width: 1010px;
